# eggai-demo

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  conftest.py  dev-requirements.txt  docker-compose-lmstudio.yaml  docker-compose-mlflow.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: ci.yaml
agents/audit/: README.md  agent.py  config.py  main.py  types.py  utils.py
agents/audit/tests/: conftest.py  test_agent.py
agents/billing/: README.md  agent.py  api_main.py  config.py  main.py  types.py  utils.py
agents/billing/dspy_modules/: billing.py  billing_data.py  billing_dataset.py  billing_optimizer.py  billing_optimizer_simba.py  optimized_billing_simba.json
agents/billing/tests/: test_agent.py  test_agent_additional.py  test_api_main.py  test_billing_data.py  test_billing_dataset.py  test_billing_module.py  test_evaluation.py  test_evaluation_metrics.py  test_lazy_initialization.py  test_main_integration.py  test_module.py  test_module_fixed.py  test_module_simple.py  test_utils_coverage.py  utils.py
agents/claims/: README.md  agent.py  api_main.py  config.py  main.py  types.py
agents/claims/dspy_modules/: claims.py  claims_data.py  claims_dataset.py  claims_errors.py  claims_optimizer.py  claims_optimizer_simba.py  claims_validators.py  optimized_claims.json  optimized_claims_simba.json
agents/claims/tests/: conftest.py  test_agent.py  test_agent_additional.py  test_api_main.py  test_claims_data.py  test_claims_dataset.py  test_claims_module.py  test_main_integration.py
agents/escalation/: Makefile  README.md  agent.py  config.py  main.py  types.py
agents/escalation/dspy_modules/: escalation.py
agents/escalation/tests/: conftest.py  test_agent.py  test_agent_additional.py  test_escalation_data.py  test_escalation_module.py
agents/frontend/: README.md  agent.py  config.py  guardrails.py  main.py  types.py  websocket_manager.py
agents/frontend/public/: admin.html  index.html
agents/frontend/tests/: conftest.py  test_agent.py  test_config_guardrails.py  test_main.py  test_main_endpoint.py
agents/policies/: README.md
agents/policies/agent/: agent.py  config.py  main.py  reasoning.py  types.py
agents/policies/ingestion/: config.py  minio_client.py  start_worker.py  temporal_client.py
agents/policies/tests/: conftest.py  test_agent.py  test_api_integration.py  test_config.py  test_embeddings.py  test_reasoning.py  test_retrieval_performance.py  test_services.py  test_start_worker_integration.py  test_tools.py  test_validators.py  test_vespa_deployment.py
agents/policies/vespa/: deploy_package.py  drop_index.py  generate_package.py  schema_builder.py  xml_generators.py
agents/triage/: README.md  agent.py  config.py  main.py  models.py
agents/triage/attention_net/: attention_based_classifier.py  attention_net_trainer.py  classifier_v5.py  config.py
agents/triage/baseline_model/: classifier_v3.py  config.py  few_shots_classifier.py  fewshot_trainer.py  utils.py
agents/triage/classifier_v6/: README.md  classifier_v6.py  data_utils.py  finetune_trainer.py  model_utils.py  training_utils.py
agents/triage/classifier_v7/: README.md  classifier_v7.py  config.py  device_utils.py  finetune_trainer.py  gemma3_seq_cls.py  serve_classifier.py  training_utils.py
agents/triage/classifier_v8/: README.md  classifier_v8.py  config.py  finetune_trainer.py  training_utils.py
agents/triage/classifiers/: __init__.py  base.py  base_test.py  registry.py  registry_test.py
agents/triage/data_sets/: loader.py  triage-testing-proofread.jsonl  (+3 more)
config/: defaults.env
dockerConfig/: development-sql.yaml  grafana-dashboard.json  grafana-datasources.yaml  loki.yaml  otel-collector.yaml  prometheus.yaml  tempo.yaml
docs/: README.md  agentic-rag.md  agents-overview.md  building-agents-eggai.md  classifier-strategies.md  ingestion-pipeline.md  model-flexibility.md  multi-agent-communication.md  observability.md  retrieval-performance-testing.md  streaming-architecture.md  system-architecture.md  vespa-search-guide.md
docs/advanced-topics/: agent-optimization.md  multi-environment-deployment.md
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployments.yaml  monitoring.yaml  service.yaml
libraries/: README.md  __init__.py
libraries/communication/: __init__.py  channels.py  messaging.py  streaming.py  transport.py
libraries/core/: __init__.py  config.py  models.py  patches.py
libraries/integrations/: __init__.py
libraries/ml/: __init__.py  device.py  mlflow.py
libraries/observability/: __init__.py
libraries/testing/: __init__.py
scripts/: __init__.py  health_check.py  start.py  startup_agents.py  startup_checks.py  startup_infra.py  startup_ui.py  stop.py
(+205 files in other folders)
